--- a/Front/cadastro.html
+++ b/Front/cadastro.html
@@ -174,7 +174,8 @@
           <input id="ano" value="ano" onclick="this.select();">
         </div>
 	     <div class="input-div" id="input-photo">
-          <input type="file" id="photo" value="photo" onclick="this.select();">
+          <input type="file" id="photo" value="photo" onclick="this.select();" 
+          accept="image/png, image/jpeg" multiple>
         </div>
 
         <div id="botoes">
