Bootstrap 4.4 e Spinner de Carregamento

--- a/Front/cadastro.html
+++ b/Front/cadastro.html
@@ -143,13 +143,23 @@
         padding: 0px;
         margin: 5px 50% 0px 0px;
       }
-      /*barra de navegação*/
+      /*Spinner*/
+      .spinner {
+        font-size: 30px;
+        width: 50px !important;
+        height: 50px !important;
+        margin-left: 150px;
+      }
     </style>
   
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.js"
-      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-      crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" 
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -176,6 +186,10 @@
 	     <div class="input-div" id="input-photo">
           <input type="file" id="photo" value="photo" onclick="this.select();" 
           accept="image/png, image/jpeg" multiple>
+        </div>
+
+        <div id="loadingBot" class="spinner spinner-border text-success" role="status" style="display: none;">
+          <span class="sr-only">Loading...</span>
         </div>
 
         <div id="botoes">
@@ -235,6 +249,8 @@
         }
 
       $("#botao").hide();
+      $("#loadingBot").show();
+
       try{
         $.ajax({
         url: con + "newmontadora", 
@@ -246,10 +262,12 @@
         },  
         success: function(data) {
           $("#botao").show();
+          $("#loadingBot").hide();
           alert(data.msg);
         },
         error: function(xhr, status, error){
           $("#botao").show();
+          $("#loadingBot").hide();
           alert( "Servidor Não Encontrado" );
         }
       });
