--- a/Front/tabela.html
+++ b/Front/tabela.html
@@ -151,21 +151,24 @@
       #lista-de-servicos {
         margin-left: 20px;
       }
-      /*barra de navegação*/
+      /*Spinner*/
+      .spinner {
+        font-size: 60px;
+        width: 100px !important;
+        height: 100px !important;;
+        margin-left: 400px;
+        margin-top: 80px;
+      }
     </style>
 
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-    crossorigin="anonymous">
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
-    crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" 
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -182,7 +185,7 @@
     <div id="login-box">
       <div id="login-box-interno">
 
-      <h1 id="h1-login-box-interno"> Tabela de Montadora </h1>
+      <h1 id="h1-login-box-interno"> Tabela de Montadoras </h1>
       <hr>
 
       <div id="lista-de-servicos">
@@ -192,6 +195,10 @@
               <th>Ano</th>
           </tr>
       </table>
+
+      <div id="loadingBot" class="spinner spinner-border text-success" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
       <hr>
     </div>
 
@@ -202,27 +209,38 @@
 
 <script>
   var con = 'http://localhost:5000/'
-  $( document ).ready(function() {
-      console.log("ready!");
-      try{
-        $.ajax({
-        url: con + "getFull", 
-        type: "GET",
-        success: function(data) {
-          for (i = 0; i < data.length; i++){ 
-            montatela(data,i);
-          }
+  $(document).ready(function() {
+  console.log("ready!");
+     
+  try {
+    $.ajax({
+      url: con + "getFull", 
+      type: "GET",
+      success: function(data) {
+        $("#loadingBot").hide();
+        for (i = 0; i < data.length; i++){ 
+          montatela(data,i);
         }
-      })      
-    }catch(ex){ 
+      }})      
+    } catch (ex) { 
+      $("#loadingBot").hide();
       alert("Error")
-    }
+    } 
   });
 
   function montatela(data,i){
+    $("#idTabelaMontadora").append(
+    "<tr>"+
+      "<td>" + data[i].name + "</td>"+
+      "<td>" + data[i].ano + "</td>"+
+      "<td> <button type='button' class='btn btn-success'" 
+        // + "data-toggle='modal' data-target='#" +  data[i]._id 
+        + " onclick=$('#" + data[i]._id + "').modal('show')>Visualizar!</button> </td>" +
+    "</tr>");
+
       $("body").append(
-  "<div class='modal fade' id='" +  data[i]._id + "' role='dialog'>" +
-    "<div class='modal-dialog'>" +
+  "<div class='modal fade' id='" +  data[i]._id + "' tabindex='-1' role='dialog' aria-labelledby='" + data[i]._id + "' aria-hidden='true'>" +
+    "<div class='modal-dialog' role='document'>" +
       "<div class='modal-content'>" +
           "<div class='modal-header'>" +
           "<h4 class='modal-title'>Nome =" + data[i].name  +  "</h4>" +
@@ -230,7 +248,6 @@
       "<div class='modal-body'>" +
           "<p> ANO =" + data[i].ano +"</p>" +
           // "<br/>" +
-
           "<img src='" + data[i].photo +  "' alt='Montadora' width='400' height='300'>" +
       "</div>" +
       "<div class='modal-footer'>" +
@@ -238,12 +255,5 @@
       "</div>"+
     "</div>"+
   "</div>")
-
-  $("#idTabelaMontadora").append(
-    "<tr>"+
-    "<td>" + data[i].name + "</td>"+
-    "<td>" + data[i].ano + "</td>"+
-    "<td> <button type='button' data-toggle='modal' data-target='#" +  data[i]._id + "'>Visualizar!</button> </td>" +
-    "</tr>");
  }      
 </script>
